--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,37 +1,45 @@
-.App {
-  text-align: center;
+.main {
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url(../../images/DALL·E\ 2023-05-05\ 13.49.18\ -\ Neve\ console\ watercolor\ carton\ picture\ for\ website\ background\ dark\ colors.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  overflow: scroll;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 100%;
+  height: 6rem;
+  margin: 0 auto;
+  background-color: #9EA3B0;
+  font-family: 'Permanent Marker', cursive;
+  ;
 }
 
-.App-link {
-  color: #61dafb;
+.mm {
+  color: #FAE1DF;
+}
+
+.results_and_newlist {
+  display: flex;
+  justify-content: space-around;
+  padding: 2.5rem;
+
 }
 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
